--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-uglify": "^2.0.0",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-mocha-phantomjs": "^4.0.0",
+    "grunt-mocha-test": "^0.13.2",
     "grunt-noflo-browser": "^1.1.4",
     "grunt-noflo-manifest": "^0.1.12",
     "json-loader": "^0.5.4",
