--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "grunt test"
   },
   "dependencies": {
-    "noflo": "1.0.0"
+    "noflo": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^4.0.0",
@@ -36,10 +36,5 @@
   },
   "keywords": [
     "noflo"
-  ],
-  "noflo": {
-    "components": {
-      "DrawSVG": "components/DrawSVG.coffee"
-    }
-  }
+  ]
 }
